Overflow issue

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -598,6 +598,7 @@ body.no-literate .content pre > code {
 .menubar {
   text-rendering: optimizeLegibility;
   font-size: 0.9em;
+  background:#fff;
   .section {
     + .section {
       border-top: solid 1px #dfe2e7;
